add a UI for the second page, for selecting the purchase option

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -511,11 +511,20 @@
     <string name="three_month_purchase_summary">Can\'t go wrong with this one.</string>
     <string name="monthly_purchase">$0.99 every month</string>
     <string name="monthly_purchase_summary">Just want to try? No problem.</string>
-    <string name="change_subscription_message">Want to upgrade? Great! After you have made your selection on the next screen, you should go to the Play Store app, and cancel the old subscription manually.</string>
+    <string name="change_subscription_message">Want to upgrade? Great! After you have made your
+        selection on the next screen, you should go to the Play Store app, and cancel the old subscription manually.</string>
     <string name="beautiful_powerful_instant">Beautiful, powerful, instant.</string>
     <string name="optimized_for_all_your_devices">Pulse is optimized for <b>all</b> your devices.
         Send texts from the web, a desktop computer, your tablet, a watch, and even your TV.</string>
-    <string name="true_imessage_competitor">The first true iMessage competitor for Android.</string>
+    <string name="true_imessage_competitor">The first <b>true</b> iMessage competitor for Android.</string>
     <string name="try_it">Try it now!</string>
+    <string name="seven_days_free">7 days free!</string>
+    <string name="competition_cant_beat">The competition can\'t touch our prices, speed, or service -
+        <b>take 7 days</b> to find out for yourself!</string>
+    <string name="select_a_trial_below">Select a trial below to get started.</string>
+    <string name="charged_after_trial">Charged after the trial:</string>
+    <string name="monthly_purchase_improved">$0.99 /\nmonth</string>
+    <string name="three_month_purchase_improved">$1.99 /\n3 month</string>
+    <string name="yearly_purchase_improved">$5.99 /\nyear</string>
 
 </resources>
