--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -501,7 +501,7 @@
     <string name="purchase_error_cancelled">You cancelled the purchase :(</string>
     <string name="purchase_error_bad_google_play">Uh oh, Google Play might be having issues, they gave us a bad result.</string>
     <string name="purchase_error_bad_sku">Hmm&#8230; That purchase didn\'t match one on our record.</string>
-    <string name="subscriptions">Subscription are billed after the seven day trial and can be changed/cancelled at any time:</string>
+    <string name="subscriptions">Subscription are billed after the seven day trial and can be changed/cancelled at any time</string>
     <string name="billed_immediately">This is billed immediately.</string>
     <string name="lifetime_purchase">$10.99 - Lifetime Membership</string>
     <string name="lifetime_purchase_summary">Pay once, and never again!</string>
@@ -521,10 +521,12 @@
     <string name="seven_days_free">7 days free!</string>
     <string name="competition_cant_beat">The competition can\'t touch our prices, speed, or service -
         <b>take 7 days</b> to find out for yourself!</string>
-    <string name="select_a_trial_below">Select a trial option below to get started.</string>
+    <string name="select_a_trial_below">Select one of the options below to start your <b>free trial</b>.</string>
     <string name="charged_after_trial">Charged after the trial:</string>
     <string name="monthly_purchase_improved">$0.99 /\nmonth</string>
     <string name="three_month_purchase_improved">$1.99 /\n3 month</string>
     <string name="yearly_purchase_improved">$5.99 /\nyear</string>
+    <string name="subscription_toast">You <b>will not</b> be charged until the 7 day trial is finished.
+        Cancel at any time.</string>
 
 </resources>
